# Client-server-application

./: .gitignore  CMakeLists.txt  Client.cpp  README.md  Server.cpp
include/net/: Client.h  DisplayServer.h  ProcessingServer.h  Server.h  ServerBase.h  SocketWrapper.h
main/: ClientMain.cpp  DisplayServerMain.cpp  ProcessingServerMain.cpp  ServerMain.cpp
src/: Client.cpp
src/main/: ClientMain.cpp  ProcessingServerMain.cpp
src/net/: Client.cpp  DisplayServer.cpp  ProcessingServer.cpp  Server.cpp  ServerBase.cpp  SocketWrapper.cpp
